# fluxkart

./: .gitignore  .test.env  Dockerfile  README.md  dev-requirements.txt  pyproject.toml  requirements.txt
bitespeed/: app.py  db.py  identify.py  models.py  routes.py  settings.py
sql/: tables.sql
tests/: conftest.py  test_identify.py
